# Aiko

./: .gitignore  README.md  aiko_context_test.ini  aiko_context_test.py  pyproject.toml  requirements.txt
aiko_memory/: __init__.py  activation.py  cli.py  consolidation.py  database.py  decay.py  models.py  opinions.py  patterns.py  repository.py  thoughts.py
tests/: test_activation.py  test_cli.py  test_consolidation.py  test_decay.py  test_opinions.py  test_patterns.py
