[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aiko-memory"
version = "0.1.0"
description = "A small CLI memory engine for modeling memories, associations, patterns, opinions, and active thoughts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
aiko-mem = "aiko_memory.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
